Changed wrap width to 428px instead of em value. This should solve chrome v5 vs vCurrent problem.

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ body {
 }
 
 #wrap {
-	width: 28.3em;
+	width: 428px;
 	margin-left: auto;
 	margin-right: auto;
 }
